--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "maatwebsite/excel": "^3.1",
+        "rachidlaasri/laravel-installer": "^4.1",
         "sohibd/laravelslug": "^1.0",
         "spatie/laravel-permission": "^5.9",
         "unisharp/laravel-filemanager": "^2.6",
